--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
+      <p>Lorem, ipsum dolor.</p>
    </div>
 
 
